Clean up scrollbar styles

--- a/docs-www/public/index.css
+++ b/docs-www/public/index.css
@@ -359,14 +359,9 @@ nav h4 {
 
 /* Scrollbar */
 
-body {
-  --scrollbar-width: 0.5rem;
-}
-
 /* width */
 ::-webkit-scrollbar {  
-  width: var(--scrollbar-width);
-  
+  width: var(0.5rem);  
 }
 
 /* Track */
